# wayglance

./: .clang-format  .editorconfig  .gitignore  .luarc.json  404.html  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  build.sh  compile_flags.txt  core_concepts.html  getting_started.html  introduction.html  print.html  searcher-c2a407aa.js  searchindex-52016b87.js  searchindex-8b0f6fe1.js  style.css  styling.html
.github/workflows/: docs.yml
crates/wayglance/: Cargo.toml
crates/wayglance-macros/: Cargo.toml
crates/wayglance-macros/src/: lib.rs
crates/wayglance/src/: cli.rs  dynamic.rs  main.rs
crates/wayglance/src/dynamic/: mod.rs  signals.rs  state.rs  timer.rs
crates/wayglance/src/lua/: mod.rs  stubs.rs  types.rs  wayglance.rs
crates/wayglance/src/modules/: mod.rs
crates/wayglance/src/modules/wm/: mod.rs
crates/wayglance/src/modules/wm/hyprland/: mod.rs  monitors.rs  utils.rs  windows.rs  workspaces.rs
crates/wayglance/src/shell/: lifecycle.rs  mod.rs  window.rs
crates/wayglance/src/widgets/: button.rs  container.rs  icon.rs  image.rs  label.rs  mod.rs  progress_bar.rs  slider.rs
crates/waypane/: Cargo.toml
crates/waypane-macros/: Cargo.toml
crates/waypane/src/: cli.rs
crates/waypane/src/dynamic/: mod.rs  signals.rs  state.rs  timer.rs
crates/waypane/src/lua/: mod.rs  types.rs  waypane.rs
crates/waypane/src/modules/wm/: mod.rs
crates/waypane/src/modules/wm/hyprland/: mod.rs  monitors.rs  windows.rs  workspaces.rs
crates/waypane/src/shell/: lifecycle.rs  mod.rs  style.rs  window.rs
crates/waypane/src/widgets/: button.rs  container.rs  icon.rs  image.rs  label.rs  mod.rs  progress_bar.rs  slider.rs
docs/: book.toml
docs/src/: SUMMARY.md  core_concepts.md  getting_started.md  introduction.md  styling.md
docs/src/lua_api/: README.md  globals.md  shell_windows.md  signals.md  state.md  timers.md
docs/src/modules/: README.md  hyprland.md
docs/src/widgets/: README.md  button.md  common.md  container.md  icon.md  image.md  label.md  progress_bar.md  slider.md
examples/: .luarc.json  bar.css  bar.lua  clock.css  clock.lua  stubs.lua
include/: glance.hpp  module.hpp  shell.hpp
include/managers/: AppManager.hpp  ConfigManager.hpp  client.hpp  config.hpp
include/modules/: BaseModule.hpp  DateModule.hpp  PlayerModule.hpp  SystemModule.hpp  date.hpp  player.hpp  system.hpp
lua_api/: globals.html  index.html  shell_windows.html  signals.html  state.html  timers.html
modules/: hyprland.html  index.html
res/: config.lua  widgets.lua
src/: Wayglance.cpp  Wayglance.hpp  dynamic.rs  glance.cpp  main.cpp  main.rs  module.cpp  shell.cpp
src/lua/: mod.rs
src/managers/: AppManager.cpp  AppManager.hpp  ConfigManager.cpp  ConfigManager.hpp  client.cpp  config.cpp
src/modules/: BaseModule.cpp  BaseModule.hpp  DateModule.cpp  DateModule.hpp  PlayerModule.cpp  PlayerModule.hpp  SystemModule.cpp  SystemModule.hpp  date.cpp  mod.rs  player.cpp  system.cpp
src/modules/wm/: hyprland.rs  mod.rs
src/shell/: config.rs  gtk_bindings.rs  mod.rs  style.rs
src/widgets/: button.rs  container.rs  label.rs  mod.rs
widgets/: button.html  common.html  container.html  icon.html  image.html  index.html  label.html  progress_bar.html  slider.html
