[package]
name = "wayglance"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
async-channel = "2.5.0"
clap = { version = "4.5.59", features = ["derive"] }
gtk4 = "0.10.3"
gtk4-layer-shell = "0.7.1"
hyprland = { git = "https://github.com/hyprland-community/hyprland-rs", branch = "master", optional = true } 
mlua = { version = "0.11.6", features = ["lua54", "send"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[features]
default = ["hyprland"]

hyprland = ["dep:hyprland"]
